[package]
name = "sastowala"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
dotenv = "0.15.0"
axum = { version = "0.6.18", features = ["headers"] }
sqlx = { version = "0.6.3", features = ["mysql", "runtime-tokio-rustls","time"] }
serde_json = "1.0.99"
reqwest = { version = "0.11.18", features = ["blocking"] }
